<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
	<TextView  
	    android:layout_width="match_parent" 
	    android:layout_height="wrap_content" 
	    android:text="Utilización de Servicios" 
	    android:gravity="center" 
	    android:textSize="20sp" 
	    android:padding="20dp"/>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center">

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/btnTrain"
			android:text="@string/btnTrain"/>
		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/btnMusic"
			android:text="@string/btnMusic"/>
	</LinearLayout>

	<LinearLayout  
		android:layout_width="match_parent" 
		android:layout_height="wrap_content"
		android:gravity="center">
		<Button 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/btnStop"
			android:id="@+id/btnFin">
		</Button>
	</LinearLayout>

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/broadcast"
		android:gravity="center"
		android:textSize="20sp"
		android:padding="20dp"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center">

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/btnTrainB"
			android:text="@string/btnTrain"/>
		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/btnMusicB"
			android:text="@string/btnMusic"/>
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center">
		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/btnStop"
			android:id="@+id/btnFinB">
		</Button>
	</LinearLayout>
	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/bib"
		android:gravity="center"
		android:textSize="20sp"
		android:padding="20dp"/>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center">

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/btnUri"
			android:text="@string/btnUri"/>
		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/btnBiblioteca"
			android:text="@string/btnBiblioteca"/>
	</LinearLayout>
</LinearLayout>